<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notice_board"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_notice_board"/>
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_chats"/>
        <item
            android:id="@+id/nav_student_review"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_student_reviews"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings"/>
    </group>


</menu>
