<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_margin_login"
        android:paddingRight="@dimen/layout_margin_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:adjustViewBounds="true"
            android:contentDescription="@string/sling_logo_content_description"
            android:scaleType="centerInside"
            android:src="@drawable/logo_sling"/>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email"
                style="@style/TextAppearance.AppCompat.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white_primary_text"/>


            <EditText
                android:id="@+id/password"
                style="@style/TextAppearance.AppCompat.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_login"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white_primary_text"/>

            <Button
                android:id="@+id/register_continue"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_login"
                android:textColor="@color/white_secondary_text"/>
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="bottom"
            android:padding="@dimen/layout_margin_login"
            android:id="@+id/new_user_text"
            android:text="@string/register_new_user"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>